unpackaged/main/default/objects/User/fields/Est_SysAdmin__c.field-meta.xml
<CustomField>
    <fullName>Est_SysAdmin__c</fullName>
    <description>True si Utilisateur est Sys Admin, champ requis pour le process de DELETE Contact en plusieurs langue</description>
    <formula>Test__c  == Profile.Name</formula>
    <inlineHelpText>True si Utilisateur est Sys Admin, champ requis pour le process de DELETE Contact en plusieurs langue</inlineHelpText>
    <label>Est SysAdmin</label>
    <type>Checkbox</type>
</CustomField>