unpackaged/main/default/objects/User/fields/Id_externe_manager__c.field-meta.xml
<CustomField>
    <fullName>Id_externe_manager__c</fullName>
    <formula>Manager.Id_externe_utilisateur__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id externe manager</label>
    <type>Text</type>
</CustomField>