unpackaged/main/default/objects/User/fields/Id_externe_utilisateur__c.field-meta.xml
<CustomField>
    <fullName>Id_externe_utilisateur__c</fullName>
    <externalId>true</externalId>
    <label>Id externe utilisateur</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>