unpackaged/main/default/objects/User/fields/License_type__c.field-meta.xml
<CustomField>
    <fullName>License_type__c</fullName>
    <label>Type de licence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Biologistes et commerciaux sans accès logistique</fullName>
            </value>
            <value>
                <fullName>2-Biologistes en licence light et externes</fullName>
            </value>
            <value>
                <fullName>3-ADV, Logistique, Management</fullName>
            </value>
            <value>
                <fullName>4-CPQ et Commerciaux CerbaVet</fullName>
            </value>
            <value>
                <fullName>5-Admin</fullName>
            </value>
            <value>
                <fullName>Lightning Platform - Enterprise Edition (Administrator)</fullName>
                <isActive>false</isActive>
                <label>Lightning Platform - Enterprise Edition (Administrator)</label>
            </value>
            <value>
                <fullName>Lightning Platform Plus - Enterprise Edition (Restricted Use)</fullName>
                <isActive>false</isActive>
                <label>Lightning Platform Plus - Enterprise Edition (Restricted Use)</label>
            </value>
            <value>
                <fullName>Lightning Platform Starter - Enterprise Edition</fullName>
                <isActive>false</isActive>
                <label>Lightning Platform Starter - Enterprise Edition</label>
            </value>
            <value>
                <fullName>Lightning Sales Cloud - Enterprise Edition</fullName>
                <isActive>false</isActive>
                <label>Lightning Sales Cloud - Enterprise Edition</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>