unpackaged/main/default/objects/User/fields/Secteur_de_vente__c.field-meta.xml
<CustomField>
    <fullName>Secteur_de_vente__c</fullName>
    <label>Secteur de vente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Aucun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>