unpackaged/main/default/objects/User/fields/Tech_By_Pass_VR__c.field-meta.xml
<CustomField>
    <fullName>Tech_By_Pass_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech By Pass VR</label>
    <type>Checkbox</type>
</CustomField>