unpackaged/main/default/objects/User/fields/TECH_User_N_2__c.field-meta.xml
<CustomField>
    <fullName>TECH_User_N_2__c</fullName>
    <formula>Manager.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH User N+2</label>
    <type>Text</type>
</CustomField>