unpackaged/main/default/objects/User/fields/Valeur_licence__c.field-meta.xml
<CustomField>
    <fullName>Valeur_licence__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valeur licence</label>
    <type>Text</type>
</CustomField>