unpackaged/main/default/objects/User/listViews/EB_tous_utilisateurs.listView-meta.xml
<ListView>
    <fullName>EB_tous_utilisateurs</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>MANAGER</columns>
    <columns>Id_externe_utilisateur__c</columns>
    <columns>ID_externe_de_reprise__c</columns>
    <filterScope>Everything</filterScope>
    <label>EB_tous utilisateurs</label>
    <language>fr</language>
</ListView>